feat: api - user management
